2007-10-08  Marcus Brinkmann  <marcus@g10code.de>

	* doc/gpgex.texi (Certificate management): New section

	* po/de.po: Convert to UTF-8.

	* autogen.sh: Add --add-missing to automake invocation.
	* configure.ac (AC_CONFIG_FILES): Add doc/Makefile.
	* Makefile.am (SUBDIRS): Add doc.
	* doc/: New directory.

2007-10-05  Marcus Brinkmann  <marcus@g10code.de>

	* po/de.po: Fix translation.

	* po/de.po: Update.

2007-09-11  Marcus Brinkmann  <marcus@g10code.de>

	* po/de.po: Update.

	* po/de.po: New file.

	* po/LINGUAS: Add de.
	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): Add
	--with-libassuan-prefix and --with-gpg-error-prefix.

2007-09-04  Marcus Brinkmann  <marcus@g10code.de>

	* m4/libassuan.m4, m4/gpg-error.m4: New files.
	* configure.ac: Check for libgpg-error and libassuan.
	* po/POTFILES.in: Add src/client.cc, src/gpgex.h and src/gpgex.cc.

2007-09-03  Marcus Brinkmann  <marcus@g10code.de>

	* m4/Makefile.am (EXTRA_DIST): Remove gpgme.m4 and gpg-error.m4.

2007-08-23  Marcus Brinkmann  <marcus@g10code.de>

	* Initial commit.


Copyright 2007 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.