@@ -135,13 +135,13 @@ Assuan manual for details.
 All commands operate on a number of input files or directories,
 specified by one or more @code{INPUT} commands:
 
-@deffn Command INPUT FILE=@var{name} [--continued]
+@deffn Command FILE=@var{name} [--continued]
 Add the file or directory @var{name} to the list of pathnames to be
 processed by the server.  The parameter @var{name} must be an absolute
 path name (including the drive letter) and is percent espaced (in
 particular, the characters %, = and white space characters are always
 escaped).  The option @code{--continued} is present for all but the
-last @code{INPUT} command.
+last @code{FILE} command.
 @end deffn
 
 
@@ -149,7 +149,7 @@ last @code{INPUT} command.
 @section Encrypting and signing files.
 
 First, the input files need to be specified by one or more
-@code{INPUT} commands.  Afterwards, the actual operation is requested:
+@code{FILE} commands.  Afterwards, the actual operation is requested:
 
 @deffn Command ENCRYPT_FILES --nohup
 @deffnx Command SIGN_FILES --nohup
@@ -218,11 +218,11 @@ promptly, and completes the operation asynchronously.
 @section Managing certificates.
 
 First, the input files need to be specified by one or more
-@code{INPUT} commands.  Afterwards, the actual operation is requested:
+@code{FILE} commands.  Afterwards, the actual operation is requested:
 
 @deffn Command IMPORT --nohup
 Request that the certificates contained in the files specified by
-@code{INPUT} are imported into the local certificate databases.
+@code{FILE} are imported into the local certificate databases.
 
 For directories, the server may offer multiple options to the user
 (for example ignore or process recursively).
@@ -241,11 +241,11 @@ which is enabled by the context menu of the background of a directory.
 @section Create and verify checksums for files.
 
 First, the input files need to be specified by one or more
-@code{INPUT} commands.  Afterwards, the actual operation is requested:
+@code{FILE} commands.  Afterwards, the actual operation is requested:
 
 @deffn Command CHECKSUM_CREATE_FILES --nohup
 Request that checksums are created for the files specifed by
-@code{INPUT}.  The choice of checksum algorithm and the destination
+@code{FILE}.  The choice of checksum algorithm and the destination
 storage and format for the created checksums depend on the preferences
 of the user and the functionality provided by the UI server.  For
 directories, the server may offer multiple options to the user (for
