@@ -1,3 +1,9 @@
+2007-11-02  Werner Koch  <wk@g10code.com>
+
+	* autogen.sh: Add --force option.
+
+	* doc/gpgex.texi: Protocol change s/"INPUT FILE"/"FILE"/.
+
 2007-10-08  Marcus Brinkmann  <marcus@g10code.de>
 
 	* doc/gpgex.texi (Certificate management): New section
